css/styles.css
/*******************************TAG SELECTORS*********************************/

body{
	margin: 0;
	text-align: center;
	

}


h1{
	margin-top: 0;
   margin-bottom: 0;
   font-family: 'Dancing Script', cursive;
   font-size: 6.25rem;
   color: #66BFBF;
}

h2{
	font-family: 'Josefin Sans', sans-serif;
	font-size: 2.5rem;
	color: #66BFBF;
}

h3{

	color: #11999E;
	font-family: 'Merriweather', serif;
}

a{
	color: #11999E;
}

hr{
	width: 10%;
	border: none;
	border-top: 10px dotted #EAF6F6;
	margin: 100px auto;
}
p{
	font-family: 'Merriweather', serif;

}


/*******************************CLASS SELECTORS*********************************/
.top-container{
	background-color: #FDEFEF;
	padding-top: 250px;
}
.middle-container{
	margin: 100px 0;
	
}
.bottom-container{
	background-color: #FDEFEF;
	padding: 50px 0 20px 0
	
}
.cloud-top{
	position: absolute;
	top: 100px;
	right: 350px;
}

.cloud-bottom{
	position: absolute;
	left: 350px;
}
.coding-img{
	width: 20%;
	float: left;
	margin-right: 30px;
}
.coffee-img{
	width: 20%;
	float: right;
	margin-left: 30px;
}
.subtitle{
	font-weight: normal;
	line-height: 2rem;
}
.skill-row{
	width: 50%;
	margin: 100px auto 100px auto;
	text-align: left;
	line-height: 2;
}

/*
.web-development-desc{
	clear: left;
}

.python-programming-desc{
	clear: right;
}
*/
.profile-img{
	width: 10%;
	margin-bottom: 30px;
}

.profile-desc{
	width: 25%;
	margin: 0 auto;
	line-height: 2;
	
}

.contact-desc-title{
	width: 50%;
	margin: 80px auto 50px auto;
}

.contact-desc-content{
	width: 40%;
	margin: 0 auto 50px auto;
	line-height: 2;
}

.btn {
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
   border-radius: 8px;
   color: #FDEFEF;
   font-family: Arial;
   font-size: 18px;
   font-weight: 100;
   padding: 10px;
   background-color: #66BFBF;
   border: solid #337FED 0;
   text-decoration: none;
   display: inline-block;
   cursor: pointer;
   text-align: center;
}

.btn:hover {
   background: #66BFBF;
   border: solid #66BFBF 1px;
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
   border-radius: 8px;
   text-decoration: none;
}

.footer-link{
	text-decoration: none;
	margin: 20px 20px;
}

.footer-link:hover{
	color: #B97A95;
}
.copyright{
	color: #716F81;
	padding: 20px 10px;
	font-size: 0.9375rem;
}

